--- a/public/index.html
+++ b/public/index.html
@@ -371,7 +371,7 @@
                               <!-- SignalSign -->
                               <div v-else-if="dashboard_widget.type=='SignalSign'">
                                 <div class="form-inline">
-                                  <table class="table">
+                                  <table class="table table-striped">
                                     <thead>
                                       <tr><th>threshold</th><th>color</th></tr>
                                     </thead>
